<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/singleAccountsTvName"
                    android:layout_marginStart="16dp"
                    android:text="@string/dash"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow android:layout_marginTop="4dp">

                <TextView
                    android:text="@string/balance"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/singleAccountsTvBalance"
                    android:layout_marginStart="16dp"
                    android:text="@string/dash"
                    android:textColor="@color/black" />
            </TableRow>
        </TableLayout>
    </androidx.cardview.widget.CardView>
</layout>